--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,5 @@
-server.forward-headers-strategy=framework
-server.servlet.context-path=
+#security.require-ssl=true
+server.ssl.key-store:/opt/ssl/keystore.p12
+server.ssl.key-store-password: niq-api
+server.ssl.keyStoreType: PKCS12
+server.ssl.keyAlias: tomcat
